--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
   repositories {
-    jcenter()
-    mavenCentral()
-  }
+      jcenter {
+          url "http://jcenter.bintray.com/"
+      }
+      maven  {
+          url "http://repo1.maven.org/maven2"
+      }  }
   dependencies {
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2'
     classpath 'com.google.gms:google-services:1.4.0-beta3'
@@ -17,6 +20,8 @@ buildscript {
 
 allprojects {
   repositories {
-    jcenter()
+      jcenter {
+          url "http://jcenter.bintray.com/"
+      }
   }
 }
